# workspace-hub

./: .babelrc  .cz.toml  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .jscpd.json  .large-files-exclusions.yaml  .legal-deny-list.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODEX.md  EXECUTE_TASKS_UV_ENVIRONMENT_GUIDE.md  FINAL_CLEANUP_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MEMORY.md  README.md  SLASH_COMMAND_MASTER_LIST.md  SPECIFY_INITIALIZATION_GUIDE.md  TRUNK_CLEANUP_SUMMARY.md  This  UV_ENVIRONMENT_QUICK_REFERENCE.md  WRK-677-review.md  batch_commit_all.sh  branch_cleanup_report_20250831_062738.json  branch_cleanup_report_20250831_064119.json  clean_all_repos_trunk.py  daily_routine_repos.bat  dummy-pre-commit-config.yaml  dummy-pre-push.sh  echo  enhanced_specs_verification_20250822_100803.json  exit:   fix_agent_os_modules.py  git-sync-report-20250813-120221.json  package-lock.json  (+21 more)
.agent-runtime/: agents  commands  resources
.agent-runtime/mcp/: .mcp.json  setup_mcp_servers.sh
.claude/: CLAUDE.md  CONFIGURATION.md  COORDINATION.md  NEW_SKILLS_SUMMARY.md  README.md  agent-skills-map.yaml  claude-flow-config.yaml  settings.json  skill-registry.yaml  statusline-command.sh
.claude/agent-library/: BEST_PRACTICES.md  README.md  registry.yaml  user_notes.md
.claude/commands/: today.md
.claude/docs/: agent-composition.md  agent-delegation-templates.md  agent-performance-audit.md  archive-horizon-followups.md  codex-roles-vs-skills.md  command-registry.md  data-format-guide.md  design-patterns-examples.md  discrepancy-notes.md  execution-patterns.md  feature-wrk-lifecycle.md  file-structure-skills-map.md  foundational-ai-skills.md  legal-scanning.md  mcp-servers.md  mcp-tools.md  multi-machine-setup.md  new-machine-setup.md  on-demand-load-triggers.md  orchestrator-gate-contract.md  orchestrator-pattern.md  permission-model.md  permissions-extend.md  plugins-vs-skills.md  pr-process.md  roadmap-2026-h1.md  rules-guide.md  self-learning-workflow.md  session-chunking.md  session-lifecycle-schematic.html  session-lifecycle-schematic.md  session-lifecycle.md  workspace-structure.md  wrk-lifecycle-stages.md
.claude/global/: CLAUDE.md  settings.json  setup.sh
.claude/hooks/: aggregate-learnings.sh  capture-corrections.sh  check-commit-msg.sh  check-encoding.sh  claude-with-logging.sh  (+28 more)
.codex/: CODEX.md  config.toml  settings.json
.drcode/: config-enhanced.json  config.json  droids-repo-template.yml  droids.yml
.gemini/: GEMINI.md  settings.json
config/: claude_profile.json  claude_usage.json  codex_profile.json  codex_usage.json  data-residence-compliance.yaml  gemini_profile.json  gemini_usage.json  knip.json  multi-ai-workflow.yaml  repos.conf  sync-items.json  test_database.conf
coordination/: .gitignore  pyproject.toml  uv.toml
coordination/.github/workflows/: python-tests.yml
coordination/src/coordination/: __init__.py
coordination/src/coordination/schemas/: __init__.py  __main__.py  _registry.py  cc_user_insights.py  learnings.py  reflect_state.py  work_queue.py
coordination/tests/: __init__.py  conftest.py  test_smoke.py
coordination/tests/integration/: test_validate_real_files.py
coordination/tests/unit/: test_cc_user_insights_schema.py  test_learnings_schema.py  test_reflect_state_schema.py  test_schema_cli.py  test_schema_registry.py  test_work_queue_schema.py
docker/: Dockerfile.baseline-test  docker-compose.baseline.yml
docs/: ACEENGINEERCODE_CONSOLIDATION_MIGRATION_PLAN.md  ACEENGINEERCODE_TO_DIGITALMODEL_MIGRATION_REPORT.md  AGENT_TO_SKILL_CONVERSION.md  AI_AGENT_GUIDELINES.md  AI_ECOSYSTEM.md  AI_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  AI_USAGE_GUIDELINES.md  COMPLIANCE_ENFORCEMENT.md  DATA_RESIDENCE_POLICY.md  DEPLOYMENT_STRATEGY_PYTEST_PYPROJECT.md  DEVELOPMENT_WORKFLOW_GUIDELINES.md  DEVELOPMENT_WORKFLOW_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTERACTIVE_MODE_GUIDELINES.md  MENU_VISUAL_GUIDE.md  PHASE_2_TIER_3_DEPLOYMENT_STRATEGY.md  README.md  README_COMPLIANCE.md  REPOSITORY_REVIEW_CHECKLIST.md  REPOSITORY_SYNC.md  SCRIPT_ORGANIZATION.md  SKILLS_INDEX.md  SKILL_BULK_INSTALLATION_SUMMARY.md  SKILL_DEPLOYMENT_COMPLETE.md  TESTING_FRAMEWORK_STANDARDS.md  TIER2_REPOSITORY_INDEX.md  TIER_3_MINIMAL_ASSESSMENT.md  WORKSPACE_CLI.md  WORKSPACE_HUB_REPOSITORY_OVERVIEW.md  archive-synthesis-report.yaml  baseline-testing-standards.md  cicd-integration-workflows.md  context-pipeline.md  patterns-audit-25pct-rule.md  phase1-batch2-results.md  phase1-performance-baseline.md  phase4-migration-summary.md  testing-infrastructure-analysis.csv  work-queue-workflow.md  workspace-hub-structure.md
docs/modules/environment/uv-templates/: .python-version  README.md  ci-cd-templates.yml  migration-script.py  modern-uv.toml  pyproject.toml  validation-checklist.md  workspace-uv.toml
examples/: advanced-configuration.ts  basic-usage.ts
monitoring-dashboard/: .gitignore  README.md  package.json
notes/: agent-wrk-counts.html  gatepass-weekly-summary.html
scripts/: README.md  ace  check_all_repos_status.sh  classify_shard04.py  connect-workspace-tailscale.ps1  cron-repository-sync.sh  droid  generate-resource-index.sh  notify.sh  optimize-mcp-context.sh  process_shard03.py  propagate-ecosystem.sh  propagate-hooks.sh  refactor-analysis.sh  repo-health.sh  repository_sync  repository_sync-auto  setup-ai-env.sh  setup-claude-env.sh  sync  workspace
skills/: README.md
specs/: index.yaml
src/: __init__.py  index.ts
state/: learned-patterns.jsonl
templates/: .agent-hub-config.yaml  .agent-references.yaml  INDEX.md  PYTEST_CONFIG_SNIPPETS.md  PYTEST_INTEGRATION_GUIDE.md  PYTEST_QUICK_REFERENCE.txt  PYTEST_TEMPLATES_SUMMARY.md  README_PYTEST_COVERAGE.md  input_config.yaml  mcp-lean.json  mcp-with-swarm.json  pseudocode.md  pytest-coverage-config.toml  review-standard.html  run_tests.sh  settings-local-lean.json  user_prompt.md  workflow.sh
tests/: README.md  jest.config.js  playwright.config.js  setup.js  stryker.conf.js  test_deduplication_fix.py  test_wrk687_lifecycle.sh
(+16402 files in other folders)
